iter_language/tests/corpus/invalid/duplicate-queue.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: duplicate-queue.iter
---
Error: duplicate queue name `memory`
   ╭─[duplicate-queue.iter:2:1]
   │
 2 │ queue memory
   │ ──────┬─────  
   │       ╰─────── duplicate queue name `memory`
   │ 
   │ Help: previous declaration at bytes 0..12
───╯
